--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section class="contenedor seccion1">
             <h2 class="titulo-seccion">Sobre nosotros</h2>
             <div class="contenedor-sobre-nosotros">
-                <img src="imagenes/undraw_best_place_re_lne9.svg" alt="" class="ilustracion">
+                <img src="siete.jpg" alt="" class="ilustracion">
                 <div class="relatos">
                     <div class="relato">
                         <h3 class="n-relato">Nombre relato</h3>
