--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 
         <div class="contenedor hero">
             <div class="contenedor-textos">
-                <h1>Pensamos en tu futuro</h1>
-                <p class="copy">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis accusantium quaerat porro nisi tempore, tempora deserunt quae assumenda sunt alias obcaecati tenetur quisquam vero maiores blanditiis illo impedit debitis eius.
-                Maxime saepe odit culpa consequuntur? In culpa quibusdam delectus voluptate iure aperiam sint aliquid nesciunt eos ea quam vero iste quae ipsum nulla, officiis molestias molestiae quas libero praesentium. Assumenda.</p>
+                <h1>Pensamos en brindar soluciones</h1>
+                <p class="copy">SIGMA CATASTRAL COLOMBIA es una empresa emergente comprometida con brindar soluciones integrales en análisis espacial, elaboración de planos, avalúos y gestión catastral. Nuestro objetivo es apoyar tanto a entidades públicas como privadas en la toma de decisiones precisas, basadas en información geográfica confiable y actualizada.
+                                Contamos con un equipo técnico comprometido, apasionado por la innovación y el desarrollo territorial, y trabajamos con herramientas tecnológicas de última generación para garantizar resultados eficientes, oportunos y de alta calidad.
+                                Nos proyectamos como un aliado estratégico en el crecimiento y ordenamiento del territorio colombiano, aportando valor a cada proyecto mediante el conocimiento técnico y el compromiso con la mejora continua.</p>
 
             </div>
         </div>
