--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="contenedor hero">
             <div class="contenedor-textos">
-                <h1>Pensamos en brindar soluciones</h1>
+                <h1>SIGMA</h1>
                 <p class="copy">SIGMA CATASTRAL COLOMBIA es una empresa emergente comprometida con brindar soluciones integrales en análisis espacial, elaboración de planos, avalúos y gestión catastral. Nuestro objetivo es apoyar tanto a entidades públicas como privadas en la toma de decisiones precisas, basadas en información geográfica confiable y actualizada.
                                 Contamos con un equipo técnico comprometido, apasionado por la innovación y el desarrollo territorial, y trabajamos con herramientas tecnológicas de última generación para garantizar resultados eficientes, oportunos y de alta calidad.
                                 Nos proyectamos como un aliado estratégico en el crecimiento y ordenamiento del territorio colombiano, aportando valor a cada proyecto mediante el conocimiento técnico y el compromiso con la mejora continua.</p>
