--- a/index.html
+++ b/index.html
@@ -35,16 +35,13 @@
             <h2 class="titulo-seccion">Sobre nosotros</h2>
             <div class="contenedor-sobre-nosotros">
                 <img src="siete.jpg" alt="" class="ilustracion">
-                <div class="relatos">
+
                     <div class="relato">
-                        <h3 class="n-relato">Nombre relato</h3>
+                        <h3 class="n-relato">GISMA</h3>
     
-                        <p class="t-relato">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex dignissimos repudiandae rem dolore velit aliquid minima quidem nostrum cum officiis!</p>
-                    </div>
-                    <div class="relato">
-                        <h3 class="n-relato">Nombre relato</h3>
-    
-                        <p class="t-relato">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex dignissimos repudiandae rem dolore velit aliquid minima quidem nostrum cum officiis!</p>
+                        <p class="t-relato">GISMA CATASTRAL COLOMBIA es una empresa emergente dedicada a ofrecer soluciones integrales en análisis espacial, elaboración de planos, avalúos y gestión catastral. Nuestro propósito es apoyar a entidades públicas y privadas en la toma de decisiones precisas, basadas en información geográfica confiable y actualizada.
+                                            Contamos con un equipo técnico altamente capacitado, comprometido con la innovación y el desarrollo territorial. Utilizamos herramientas tecnológicas de última generación que garantizan resultados eficientes, oportunos y de alta calidad.
+                                            Nos proyectamos como un aliado estratégico en el crecimiento y ordenamiento del territorio colombiano, aportando valor a cada proyecto mediante el conocimiento técnico y nuestro compromiso con la mejora continua.</p>
                     </div>
                 </div>
             </div>
