--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="contenedor hero">
             <div class="contenedor-textos">
                 <h1>GISMA-CATASTRO</h1>
-                <p class="copy">GISMA (Geographic Information System + Manejo Avanzado</p>
+                <p class="copy">GISMA (Geographic Information System + Manejo Avanzado)</p>
 
             </div>
         </div>
