--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="contenedor hero">
             <div class="contenedor-textos">
-                <h1>GISMA-CATASTRO</h1>
+                <h1>GISMA-CATASTRAL-COLOMBIA</h1>
                 <p class="copy">GISMA (Geographic Information System + Manejo Avanzado)</p>
 
             </div>
