--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                 <h2 class="titulo-seccion">Portafolio</h2>
                 <div class="portafolio-contenedor">
                     <div class="imagen-contenedor">
-                        <img src="uno.jpg" alt="">
+                        <img src="uno.jpg" alt="Descripción">
+                        <div class="texto-centrado">Avalúos</div>
                     </div>
                     <div class="imagen-contenedor">
                         <img src="dos.jpg" alt="">
