--- a/index.html
+++ b/index.html
@@ -53,19 +53,24 @@
                         <div class="texto-centrado">Avalúos</div>
                     </div>
                     <div class="imagen-contenedor">
-                        <img src="dos.jpg" alt="">
+                        <img src="dos.jpg" alt="Descripción">
+                        <div class="texto-centrado">Topografía</div>
                     </div>
                     <div class="imagen-contenedor">
-                        <img src="tres.jpg" alt="">
+                        <img src="tres.jpg" alt="Descripción">
+                        <div class="texto-centrado">Análisis espacial </div>
                     </div>
                     <div class="imagen-contenedor">
-                        <img src="cuatro.jpg" alt="">
+                        <img src="cuatro.jpg" alt="Descripción">
+                        <div class="texto-centrado">Planos</div>
                     </div>
                     <div class="imagen-contenedor">
-                        <img src="cinco.jpg" alt="">
+                        <img src="cinco.jpg" alt="Descripción">
+                        <div class="texto-centrado">Reconstrucciones</div>
                     </div>
                     <div class="imagen-contenedor">
-                        <img src="seis.jpg" alt="">
+                        <img src="seis.jpg" alt="Descripción">
+                        <div class="texto-centrado">Estudio títulos</div>
                     </div>
                 </div>
             </div>
