--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
                     </div>
                     <div class="imagen-contenedor">
                         <img src="cuatro.jpg" alt="Descripción">
-                        <div class="texto-centrado">Planos</div>
+                        <div class="texto-centrado">Planos y Reconstrucciones</div>
                     </div>
                     <div class="imagen-contenedor">
                         <img src="cinco.jpg" alt="Descripción">
-                        <div class="texto-centrado">Reconstrucciones</div>
+                        <div class="texto-centrado">Paginas WEB personalizadas</div>
                     </div>
                     <div class="imagen-contenedor">
                         <img src="seis.jpg" alt="Descripción">
