--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mapa con Leaflet.js</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Arvo:ital@1&display=swap" rel="stylesheet">
@@ -71,6 +72,15 @@
                     <div class="imagen-contenedor">
                         <img src="seis.jpg" alt="Descripción">
                         <div class="texto-centrado">Estudio títulos</div>
+                        
+                     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.1/dist/leaflet.css" />
+                       
+                            <style>
+                                #map {
+                                height: 400px;
+                    width: 100%;
+                            }
+                        </style>
                     </div>
                 </div>
             </div>
