--- a/index.html
+++ b/index.html
@@ -111,6 +111,20 @@
 </footer>
 
 
+<script src="https://unpkg.com/leaflet@1.9.1/dist/leaflet.js"></script>
+    <script>
+    // Inicializar el mapa
+    var map = L.map('map').setView([4.5709, -74.2973], 6); // Coordenadas para Colombia
 
+    // Cargar las capas de los tiles del mapa
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+    }).addTo(map);
+
+    // Agregar un marcador de ejemplo
+    L.marker([4.5709, -74.2973]).addTo(map)
+        .bindPopup('¡Hola, Bogotá!')
+        .openPopup();
+</script>
 </body>
 </html>
