--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Arvo:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="estilos.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.1/dist/leaflet.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.locatecontrol/dist/L.Control.Locate.min.css" />
+
+
+    
     <title>Document</title>
      <style>
         #map {
@@ -110,21 +115,60 @@
     © 2025 GIGMA CATASTRAL COLOMBIA. Todos los derechos reservados.
 </footer>
 
-
 <script src="https://unpkg.com/leaflet@1.9.1/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.js"></script>
+    <script src="https://unpkg.com/leaflet.locatecontrol/dist/L.Control.Locate.min.js"></script>
+
     <script>
-    // Inicializar el mapa
-    var map = L.map('map').setView([4.5709, -74.2973], 6); // Coordenadas para Colombia
+        // Inicializar el mapa
+        var map = L.map('map').setView([4.5709, -74.2973], 6); // Coordenadas para Colombia
 
-    // Cargar las capas de los tiles del mapa
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-    }).addTo(map);
+        // Cargar capas de mapas
+        var openStreetMap = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+        });
 
-    // Agregar un marcador de ejemplo
-    L.marker([4.5709, -74.2973]).addTo(map)
-        .bindPopup('¡Hola, Bogotá!')
-        .openPopup();
-</script>
+        var satelliteMap = L.tileLayer('https://{s}.satellite.stamen.com/terrain/{z}/{x}/{y}.jpg', {
+            attribution: 'Map tiles by <a href="https://stamen.com">Stamen Design</a>, under <a href="https://creativecommons.org/licenses/by/3.0">CC BY 3.0</a>. Data by <a href="http://openstreetmap.org">OpenStreetMap</a>, under ODbL.'
+        });
+
+        // Agregar las capas al mapa
+        openStreetMap.addTo(map);
+
+        // Agregar controles de capas
+        var baseMaps = {
+            "Mapa de calles": openStreetMap,
+            "Mapa Satelital": satelliteMap
+        };
+        L.control.layers(baseMaps).addTo(map);
+
+        // Agregar un marcador con un popup
+        var marker = L.marker([4.5709, -74.2973]).addTo(map)
+            .bindPopup('<b>¡Bienvenido a Colombia!</b><br>Este es un marcador en el mapa.')
+            .openPopup();
+
+        // Agregar control de geolocalización
+        L.control.locate({
+            position: 'topright',
+            drawCircle: true,
+            follow: true,
+            setView: true,
+            markerStyle: {
+                fillColor: '#6fa3ef',
+                weight: 1,
+                opacity: 0.7,
+                fillOpacity: 0.5
+            }
+        }).addTo(map);
+
+        // Agregar ruta con el plugin leaflet-routing-machine
+        var routeControl = L.Routing.control({
+            waypoints: [
+                L.latLng(4.5709, -74.2973), // Bogotá
+                L.latLng(6.2442, -75.5812)  // Medellín
+            ],
+            routeWhileDragging: true
+        }).addTo(map);
+    </script>
 </body>
 </html>
