Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
     © 2025 GIGMA CATASTRAL COLOMBIA. Todos los derechos reservados.
 </footer>
 
+<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d13375.655610523661!2d-74.09006914673567!3d4.664121649353405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sPARQUE%20SAN%20MIGUEL!5e0!3m2!1ses!2sco!4v1769034529854!5m2!1ses!2sco" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    
 <script src="https://unpkg.com/leaflet@1.9.1/dist/leaflet.js"></script>
     <script src="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.js"></script>
     <script src="https://unpkg.com/leaflet.locatecontrol/dist/L.Control.Locate.min.js"></script>
@@ -169,3 +171,4 @@
     </script>
 </body>
 </html>
+
